Possible fix Safari jumping to random image

--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -231,6 +231,9 @@
             object-fit: contain;
         }
     }
+    .css--safari & {
+        scroll-snap-type: none; // prevent unpredictable behaviour Safari
+    }
 }
 
 .container__image {
